@@ -3,6 +3,11 @@ dpf-ax changelog
 	by <hackfin@section5.ch>
 	Find details in the git or svn logs.
 
+Thu, 23 Oct 2012
+       by superelchi
+       * New model:
+         - intertronic (thx grouproot).
+
 Wed, 17 Oct 2012
        by superelchi
        * New model:
